<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <!-- View for image -->
    <br.com.lucassouza.ntech.telabranca.TelaBrancaView
        android:id="@+id/tela_branca"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal" />


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu2"
        android:layout_gravity="end|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        fab:menu_labels_style="@style/MenuLabelsStyle"
        fab:menu_labels_showAnimation="@anim/jump_from_down"
        fab:menu_labels_hideAnimation="@anim/jump_to_down"
        fab:menu_animationDelayPerItem="0"
        fab:menu_shadowColor="#444"
        fab:menu_colorNormal="@color/cororiginal"
        fab:menu_colorPressed="@color/corclique"
        fab:menu_colorRipple="@color/cordepois">
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btn_pincel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_brush_24"
            fab:fab_label="@string/pincel"
            style="@style/MenuButtonsStyle" />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btn_cores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_color_lens_24"
            fab:fab_label="@string/cores"
            style="@style/MenuButtonsStyle" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btn_limpartela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_delete_24"
            fab:fab_label="@string/lim_tela"
            style="@style/MenuButtonsStyle" />


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btn_desfazer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_undo_24"
            fab:fab_label="@string/voltar"
            style="@style/MenuButtonsStyle" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btn_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_save_24"
            fab:fab_label="@string/salvar"
            style="@style/MenuButtonsStyle" />

    </com.github.clans.fab.FloatingActionMenu>

</FrameLayout>
